--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
     </header>
     <main>
         <input type="text" id="searchBar" placeholder="Search...">
-        <div id="content">
-            <iframe src="data.html" id="dataFrame"></iframe>
-        </div>
+        <iframe id="dataFrame" src="data.html"></iframe>
     </main>
     <script src="script.js"></script>
 </body>
