--- a/index.html
+++ b/index.html
@@ -1,19 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-AU">
 <head>
+    <title>SurfSearch</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Search Page</title>
+    <meta name="viewport" content="width=device-width-intial-scale-1.0">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Search Page</h1>
-    </header>
-    <main>
-        <input type="text" id="searchBar" placeholder="Search...">
-        <iframe id="dataFrame" src="data.html"></iframe>
-    </main>
-    <script src="script.js"></script>
+    <script async src="https://cse.google.com/cse.js?cx=4069ae34299454968">
+    </script>
+    <div class="gcse-searchbox-only"></div>
 </body>
 </html>
