--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <script async src="https://cse.google.com/cse.js?cx=4069ae34299454968">
     </script>
-    <div class="gcse-searchbox-only"></div>
+    <div class="gcse-searchbox"></div>
+    <div class="gcse-searchresults"></div>
 </body>
 </html>
