--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <title>SurfSearch</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width-intial-scale-1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <script type="text/javascript" href="script.js"></script>
 </head>
 <body>
+    <button onClick()="back()">⬅</button>
     <script async src="https://cse.google.com/cse.js?cx=4069ae34299454968">
     </script>
     <div class="gcse-searchbox"></div>
