--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script type="text/javascript" href="script.js"></script>
 </head>
 <body>
-    <button onClick()="back()">⬅</button>
+    <a href="index.html">Home</a>
     <script async src="https://cse.google.com/cse.js?cx=4069ae34299454968">
     </script>
     <div class="gcse-searchbox"></div>
