--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <script type="text/javascript" href="script.js"></script>
 </head>
 <body>
-    <a href="index.html">Home</a>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+    </ul>
     <script async src="https://cse.google.com/cse.js?cx=4069ae34299454968">
     </script>
     <div class="gcse-searchbox"></div>
