--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width-intial-scale-1.0">
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <link rel="icon" type="image/x-icon" href="homeTopImage.png">
     <script type="text/javascript" href="script.js"></script>
 </head>
 <body>
@@ -13,6 +12,7 @@
         <li><a href="index.html">Home</a></li>
     </ul>
     <br>
+    <img src="homeTopImg.png" alt="Surfsearch Logo" style="display:block; margin:center;">
     <script async src="https://cse.google.com/cse.js?cx=4069ae34299454968">
     </script>
     <div class="gcse-searchbox"></div>
