--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <li><a href="index.html">Home</a></li>
     </ul>
     <br>
-    <img src="homeTopImg.png" alt="Surfsearch Logo" style="display:block; margin:center;">
+    <img src="homeTopImg.png" alt="Surfsearch Logo">
     <script async src="https://cse.google.com/cse.js?cx=4069ae34299454968">
     </script>
     <div class="gcse-searchbox"></div>
