--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html">surfsearch</a></li>
     </ul>
     <br>
     <img src="homeTopImg.png" alt="Surfsearch Logo" width="200px">
