--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <ul>
-        <li><a href="index.html"><img src="homeTopImg.png" height="75px"></a></li>
+        <li><a href="about.html">About</a></li>
     </ul>
     <br>
     <img src="homeTopImg.png" alt="Surfsearch Logo" id="homeTopImg">
