--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <img src="homeTopImg.png" alt="Surfsearch Logo" id="homeTopImg">
     <script async src="https://cse.google.com/cse.js?cx=4069ae34299454968">
     </script>
-    <div class="gcse-searchbox"></div>
-    <div class="gcse-searchresults"></div>
+    <div class="gcse-search"></div>
 </body>
 </html>
