--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <ul>
         <li><a href="about.html">About</a></li>
-        <li id="login"><a href="login.html"></a></li>
+        <li id="login"><a href="login.html">Login</a></li>
     </ul>
     <br>
     <img src="homeTopImg.png" alt="Surfsearch Logo" id="homeTopImg">
