--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <ul>
-        <li id="aboutLink"><a href="about.html">About</a></li>
-        <li id="login"><a href="login.html">Login</a></li>
+        <span><li id="aboutLink"><a href="about.html">About</a></li></span>
+        <span><li id="login"><a href="login.html">Login</a></li></span>
     </ul>
     <br>
     <img src="homeTopImg.png" alt="Surfsearch Logo" id="homeTopImg">
