--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <ul>
-        <li id="aboutLink"><a href="about.html">About</a></li>&nbsp;
+        <li id="aboutLink"><a href="about.html">About&nbsp;</a></li>
         <li id="login"><a href="login.html">Login</a></li>
     </ul>
     <br>
